...
        }}
      />
      <Tab.Screen
        name="AddPlayerManual"
        component={AddPlayerManual}
        options={{
          title: "Manual",
          tabBarIcon: ({ focused }) => {
            return <TabIcon color={focused ? green : "#555"} name="add" />;
          },
        }}
      />
    </Tab.Navigator>
...
